# SimWars2

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/AuraEffectImpl/: FoodAuras.cpp
src/AuraModeling/: AuraConstants.h  Effect.h  EffectConstants.h  EffectMgr.cpp  EffectMgr.h
src/SimulationInstance/: SimulationInstance.h
src/UnitModeling/: Character.cpp  Character.h  DollConstants.h  DollModifiers.h  PaperDoll.cpp  PaperDoll.h  Unit.cpp  Unit.h
src/shared/: typedefs.h
tests/: CMakeLists.txt  simpletest.cpp
